--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --mode development"
+    "dev": "webpack --mode development",
+    "proc": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,6 @@
     "babel-core": "6.26.3",
     "babel-loader": "8.2.2",
     "babel-preset-env": "1.7.0",
-    "webpack-cli": "^4.7.0"
+    "webpack-cli": "4.7.0"
   }
 }
