--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "@babel/core": "7.14.3",
     "@babel/preset-react": "7.13.13",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "request": "^2.88.2",
     "webpack": "5.38.1"
   },
   "devDependencies": {
